--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
-    "start": "node src/app.js"
+    "start": "node src/app.js",
+    "git": "git add . && git commit -m “config” && git push origin main"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +16,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
-    "express": "^4.18.2",
+    "express": "^5.1.0",
     "nodemon": "^3.1.10",
     "openai": "^5.12.2"
   }
